--- a/docs/RepastModelTesting/RepastModelTesting.tex
+++ b/docs/RepastModelTesting/RepastModelTesting.tex
@@ -115,7 +115,7 @@ Modify the output folder for the \texttt{test} source folder. Right click on the
 
 
 \item
-Add a JUnit Test Case by right clicking on the project in the Package Explorer view,  choosing \emph{New} $\rightarrow$ \emph{Other}\ldots (Fig.~\ref{fig:newOther}). Then navigate to \emph{Java} $\rightarrow$ \emph{JUnit} and choose \emph{Junit Test Case} (Fig.~\ref{fig:JUnitTestCase}). In the \emph{New JUnit Test Case} wizard choose the \emph{New JUnit 4 test} option, specify the correct source folder (\texttt{test}), name your test case, include all the method stubs, and click on \emph{Finish} (Fig.~\ref{fig:NewJUnitTestCase}). If JUnit was not previously on your project's build path, you will see a dialog asking if you'd like to add it (Fig.~\ref{fig:AddToBuildPath}). Click \emph{OK} to add the JUnit 4 library to the project's build path.
+Add a JUnit Test Case by right clicking on the project in the Package Explorer view,  choosing \emph{New} $\rightarrow$ \emph{Other}\ldots (Fig.~\ref{fig:newOther}). Then navigate to \emph{Java} $\rightarrow$ \emph{JUnit} and choose \emph{Junit Test Case} (Fig.~\ref{fig:JUnitTestCase})\footnote{This creates a Java JUnit test case, but a Groovy JUnit test case can be used as well.}. In the \emph{New JUnit Test Case} wizard choose the \emph{New JUnit 4 test} option, specify the correct source folder (\texttt{test}), name your test case, include all the method stubs, and click on \emph{Finish} (Fig.~\ref{fig:NewJUnitTestCase})\footnote{While this document is focused on JUnit 4, JUnit 3 or other testing frameworks can also be utilized.}. If JUnit was not previously on your project's build path, you will see a dialog asking if you'd like to add it (Fig.~\ref{fig:AddToBuildPath}). Click \emph{OK} to add the JUnit 4 library to the project's build path.
 
 \begin{figure}
 \begin{center}
@@ -170,7 +170,9 @@ Once the setup is complete, there are a number of different types of model tests
 If the elements being tested are relatively decoupled, there is nothing special that needs to be done in terms of test case setup. In this scenario, the @BeforeClass, @AfterClass, @Before, and @After annotated methods do not need any Repast Simphony specific elements and tests can be written in the usual way JUnit tests are written.
 
 \subsection{Use Case 2: Schedule Based Model Testing with Repast Simphony Models}
-Some model behaviors that you might want to test involve scheduled behaviors. For example, you might want to know that at a certain tick, specific model actions had occurred. This is especially relevant to any Statecharts related behaviors. In this situation, the RunEnvironment will nee to be set up with a Schedule object. Listing~\ref{lst:scheduleSetup} shows an example where the setup is executed before each of the tests that will be run. 
+\label{sec:use2}
+Some model behaviors that you might want to test involve scheduled behaviors. For example, you might want to know that at a certain tick, specific model actions had occurred. This is especially relevant to any Statecharts related behaviors. In this situation, the RunEnvironment will need to be passed a Schedule object. Listing~\ref{lst:scheduleSetup} shows an example where the schedule based setup is executed before each of the tests that will be run (i.e., in the @Before annotated method).
+ 
 \noindent\begin{minipage}[h]{\textwidth}
 \vspace{.2in}
 \lstset{language=java,caption=@Setup method in a schedule dependent test case.,label=lst:scheduleSetup}
@@ -188,26 +190,33 @@ public void setUp() throws Exception {
 \end{lstlisting}
 \vspace{.2in}
 \end{minipage}
-Line 3 shows the creation of the Schedule object. It is then sent as the first parameter to the RunEnvironment static \texttt{init} method. The second and third parameters can be \texttt{null} for this case and the fourth parameter indicates whether this is a batch (i.e., headless) run, which it is so we specify \texttt{true}. Line 5 creates a new DefaultContext that is set as the master context of the \texttt{init}-ed RunState in line 6. Lines 5 and 6 are only strictly necessary for testing behaviors that rely on a master context being set, which is the case for Statecharts.
+Line 3 in Listing~\ref{lst:scheduleSetup} shows the creation of the Schedule object. It is then sent as the first parameter to the RunEnvironment static \texttt{init} method. The second and third parameters can be \texttt{null} for this case and the fourth parameter indicates whether this is a batch (i.e., headless) run, which it is so we specify \texttt{true}. Line 5 creates a new DefaultContext that is set as the master context of the \texttt{init}-ed RunState in line 6. Lines 5 and 6 are only strictly necessary for testing behaviors that rely on a master context being set, which is the case for Statecharts.
 
 At this point, tests can be written such as in Listing~\ref{lst:scheduleSetupTest}:
 
 \noindent\begin{minipage}[h]{\textwidth}
 \vspace{.2in}
-\lstset{language=java,caption=@Setup method in a schedule dependent test case.,label=lst:scheduleSetupTest}
+\lstset{language=java,caption=Example test method where the schedule is advanced.,label=lst:scheduleSetupTest}
 \begin{lstlisting}
-@Testpublic void testColonizedToInfected() {
+@Test
+public void testUninfectedToInfected() {
 	ISchedule schedule = RunEnvironment.getInstance().
-			getCurrentSchedule();	Person p = new Person();	assertEquals(UNINFECTED, p.getStatus());
-	for (int i = 0; i < 5; ++i) {		schedule.execute();	}
-	assertEquals(INFECTED, p.getStatus());}
+			getCurrentSchedule();
+	Person p = new Person();
+	assertEquals(UNINFECTED, p.getStatus());
+	for (int i = 0; i < 5; ++i) {
+		schedule.execute();
+	}
+	assertEquals(INFECTED, p.getStatus());
+}
 \end{lstlisting}
 \vspace{.2in}
 \end{minipage}
-In this hypothetical example, a Person object is created, it is verified that the person's status is \texttt{UNINFECTED}, the schedule is advanced 5 times, at which point the person's status is checked to see that it is \texttt{INFECTED}. An important item to note here is that the scheduler in Repast Simphony doesn't just allow for discrete time steps so the fact that the schedule is executed 5 times doesn't necessarily mean that we will find ourselves at tick 5 after the \texttt{for} loop, unless there were actions scheduled only to occur on every tick.
+In this hypothetical example, a Person agent is created, it is verified that the person's status is \texttt{UNINFECTED}, the schedule is advanced 5 times, at which point the person's status is checked to see that it is \texttt{INFECTED}. An important item to note here is that the scheduler in Repast Simphony doesn't just allow for discrete time steps so the fact that the schedule is executed 5 times doesn't necessarily mean that we will find ourselves at tick 5 after the \texttt{for} loop, unless there were actions scheduled only to occur on every tick.
 
 \subsection{Use Case 3: Context Builder Based Model Testing with Repast Simphony Models}
-For cases where the specific setup defined in a ContextBuilder is required, 
+\label{sec:use3}
+For cases where the specific setup defined in a ContextBuilder is required for testing, the @Before testing setup might look like Listing~\ref{lst:contextBuilderSetup}.
 
 \noindent\begin{minipage}[h]{\textwidth}
 \vspace{.2in}
@@ -218,12 +227,9 @@ public Context context;
 
 @Before
 public void setUp() throws Exception {
-	Schedule schedule = new Schedule();
-	RunEnvironment.init(schedule, null, null, true);
 	context = new DefaultContext();
 	MyContextBuilder builder = new MyContextBuilder();
 	context = builder.build(context);
-	RunState.init().setMasterContext(context);
 	
 	// Any additional setup
 }
@@ -231,10 +237,25 @@ public void setUp() throws Exception {
 \end{lstlisting}
 \vspace{.2in}
 \end{minipage}
+Here, after creating the DefaultContext, the context builder is used to build it into the state it should be in at the start of each simulation run. A test utilizing the setup in Listing~\ref{lst:contextBuilderSetup} might look like Listing~\ref{lst:contextBuilderSetupTest}. In this hypothetical test, a new Person agent is added to the main context and a \texttt{hasNeighbors} method is called to ensure that the added Person agent has neighbors in the pre-built context.
+
+\noindent\begin{minipage}[h]{\textwidth}
+\vspace{.2in}
+\lstset{language=java,caption=Example test method where the context state created by a context builder is used.,label=lst:contextBuilderSetupTest}
+\begin{lstlisting}
+@Test
+public void testAddingPersonToContext() {
+	Person p = new Person();
+	context.add(p);
+	assertTrue(p.hasNeighbors());
+}
+\end{lstlisting}
+\vspace{.2in}
+\end{minipage}
 
 
 \subsection{Use Case 4: Model Testing with ReLogo Models}
-For cases
+ReLogo models come with the infrastucture and associated assumptions of the ReLogo world which is built by the SimBuilder context builder included with each model. To test a ReLogo model there are a few additional steps needed for the test setup beyond  Section~\ref{sec:use3}. Listing~\ref{lst:relogoSetup} shows the setup optionally separated into @BeforeClass and @Before components. The idea here is that the ReLogo world is built once before all the tests are run but before each individual test is executed, the observer clears the ReLogo world state, removing existing turtles and links and resetting patches.
 
 \noindent\begin{minipage}[h]{\textwidth}
 \vspace{.2in}
@@ -247,14 +268,18 @@ static UserObserver observer;
 public static void setUpBeforeClass() throws Exception {
 	String scenarioDirString = "ModelName.rs"
 	ScenarioUtils.setScenarioDir(new File(scenarioDirString))
-	File paramsFile = new File(ScenarioUtils.getScenarioDir(), "parameters.xml");
-
+	File paramsFile = new File(ScenarioUtils.getScenarioDir(),
+		"parameters.xml");
 	ParametersParser pp = new ParametersParser(paramsFile);
 	Parameters params = pp.getParameters();
 	RunEnvironment.init(new Schedule(), null, params, true);
 	Context context = new DefaultContext();
 	SimBuilder builder = new SimBuilder();
 	context = builder.build(context);
+	
+	// If statecharts are used in the ReLogo model
+	RunState.init().setMasterContext(context);
+	
 	observer = (UserObserver)context.iterator().next();
 	
 	// Any additional before class setup
