Expanded introduction section for Repast Model Testing doc.

--- a/docs/RepastModelTesting/RepastModelTesting.tex
+++ b/docs/RepastModelTesting/RepastModelTesting.tex
@@ -48,8 +48,11 @@ Before we can do anything with Repast Simphony, we need to make sure that we hav
 
 \section{Getting Started with Repast Simphony Model Testing}
 
-This guide will walk you through a few model testing use cases using Repast Simphony. To learn more about model testing, including the benefits of test driven development (TDD) when developing agent models, see Collier and Ozik (2013)\footnote{Collier, N, and J Ozik. “Test-Driven Agent-Based Simulation Development.” To appear in WSC 2013 Proceedings. Washington, D.C., 2013.}. For more information on the JUnit testing framework that we will be using, see \href{http://junit.org}{http://junit.org}.
+Developing a useful agent-based simulation involves acquiring sufficient knowledge of a model’s domain, developing the conceptual model, often while grounding it in more abstract theories of the domain, and then translating the model into software. The work can be complex and is rarely a waterfall type process where each step is completed before the next step begins. Rather, the process in an iterative one where the development of the model may require additional domain knowledge that, in turn, requires changes in the software. Furthermore, model specifications and requirements may change also requiring changes in the software. Test-driven development (TDD) is a general software development technique that can help with managing this complexity. In TDD the development of software is driven by the creation of many small automated unit tests each of which exercise some small part of the larger system's behavior. An aspect of the extreme-programming movement that has gained popularity since the late 1990s, the technique itself gained in prominence with the publication of Kent Beck's seminal work ``Test-Driven Development: By Example"\footnote{Beck, K. 2003. Test Driven Development: By Example. Boston, Massachusetts: Addison-Wesley.}.
 
+The present guide will walk you through a number of agent-model TDD use cases with Repast Simphony. For those interested in learning more about agent-model testing, including the benefits of TDD when developing agent models, see Collier and Ozik (2013)\footnote{Collier, N, and J Ozik. “Test-Driven Agent-Based Simulation Development.” To appear in WSC 2013 Proceedings. Washington, D.C., 2013.}. For more information on the JUnit testing framework that we will be using, see \href{http://junit.org}{http://junit.org}.
+
+\section{Agent-model Testing Use Cases with Repast Simphony}
 To add tests into an existing Repast Simphony project, we recommend the following setup steps:
 \begin{enumerate}
 \item
